# Snake-Game

./: CMakeLists.txt  app.py
src/: food.cpp  food.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h
